--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -59,6 +59,17 @@
 				"group": "watch",
 				"reveal": "always"
 			}
+		},
+		{
+			"label": "build:esbuild",
+			"type": "npm",
+			"script": "build:esbuild",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"problemMatcher": [],
+			"isBackground": false
 		}
 	]
 }
