--- a/package.json
+++ b/package.json
@@ -371,11 +371,13 @@
 		"@google/genai": "^0.12.0",
 		"@mistralai/mistralai": "^1.3.6",
 		"@modelcontextprotocol/sdk": "^1.7.0",
+		"@tailwindcss/vite": "^4.1.5",
 		"@types/clone-deep": "^4.0.4",
 		"@types/pdf-parse": "^1.1.4",
 		"@types/tmp": "^0.2.6",
 		"@types/turndown": "^5.0.5",
 		"@types/vscode": "^1.95.0",
+		"@vitejs/plugin-react": "^4.4.1",
 		"@vscode/codicons": "^0.0.36",
 		"axios": "^1.7.4",
 		"cheerio": "^1.0.0",
