--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -17,51 +17,52 @@
 		"clean": "rimraf build"
 	},
 	"dependencies": {
-		"@radix-ui/react-alert-dialog": "^1.1.6",
-		"@radix-ui/react-checkbox": "^1.1.5",
-		"@radix-ui/react-collapsible": "^1.1.3",
-		"@radix-ui/react-dialog": "^1.1.6",
-		"@radix-ui/react-dropdown-menu": "^2.1.5",
+		"@radix-ui/react-alert-dialog": "^1.1.13",
+		"@radix-ui/react-checkbox": "^1.3.1",
+		"@radix-ui/react-collapsible": "^1.1.10",
+		"@radix-ui/react-dialog": "^1.1.13",
+		"@radix-ui/react-dropdown-menu": "^2.1.14",
 		"@radix-ui/react-icons": "^1.3.2",
-		"@radix-ui/react-popover": "^1.1.6",
-		"@radix-ui/react-progress": "^1.1.2",
-		"@radix-ui/react-select": "^2.1.6",
-		"@radix-ui/react-separator": "^1.1.2",
-		"@radix-ui/react-slider": "^1.2.3",
-		"@radix-ui/react-slot": "^1.1.2",
-		"@radix-ui/react-tooltip": "^1.1.8",
+		"@radix-ui/react-popover": "^1.1.13",
+		"@radix-ui/react-progress": "^1.1.6",
+		"@radix-ui/react-select": "^2.2.4",
+		"@radix-ui/react-separator": "^1.1.6",
+		"@radix-ui/react-slider": "^1.3.4",
+		"@radix-ui/react-slot": "^1.2.2",
+		"@radix-ui/react-tooltip": "^1.2.6",
 		"@tailwindcss/vite": "^4.0.0",
-		"@tanstack/react-query": "^5.68.0",
+		"@tanstack/react-query": "^5.75.4",
 		"@vscode/webview-ui-toolkit": "^1.4.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"cmdk": "^1.0.0",
-		"debounce": "^2.1.1",
+		"cmdk": "^1.1.1",
+		"debounce": "^2.2.0",
 		"fast-deep-equal": "^3.1.3",
 		"fzf": "^0.5.2",
 		"i18next": "^24.2.2",
 		"i18next-http-backend": "^3.0.2",
 		"knuth-shuffle-seeded": "^1.0.6",
 		"lucide-react": "^0.475.0",
-		"mermaid": "^11.4.1",
-		"posthog-js": "^1.227.2",
+		"mermaid": "^11.6.0",
+		"posthog-js": "^1.239.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-i18next": "^15.4.1",
+		"react-i18next": "^15.5.1",
 		"react-markdown": "^9.0.3",
 		"react-remark": "^2.1.0",
-		"react-textarea-autosize": "^8.5.3",
-		"react-use": "^17.5.1",
-		"react-virtuoso": "^4.7.13",
+		"react-textarea-autosize": "^8.5.9",
+		"react-use": "^17.6.0",
+		"react-virtuoso": "^4.12.7",
 		"rehype-highlight": "^7.0.0",
 		"remark-gfm": "^4.0.1",
-		"remove-markdown": "^0.6.0",
+		"remove-markdown": "^0.6.2",
 		"shell-quote": "^1.8.2",
 		"shiki": "^3.2.1",
-		"styled-components": "^6.1.13",
+		"styled-components": "^6.1.17",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss": "^4.0.0",
 		"tailwindcss-animate": "^1.0.7",
+		"unist-util-visit": "^5.0.0",
 		"vscrui": "^0.2.2",
 		"zod": "^3.24.2"
 	},
